Exercise 1.8/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-server-svc
spec:
  type: ClusterIP
  selector:
    app: todo-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8000
